# nullimp

./: CMakeLists.txt  bcgmresize.php  bench_proc.php  mainwindow.cpp  mainwindow.h  mainwindow.ui  nullimp.pro  shmcnt.php  vlinkocv.h
dnimp/: baseimp.cpp  baseimp.h  benchmark.cpp  benchmark.h  gmagickimp.cpp  gmagickimp.h  impfactory.cpp  impfactory.h  main.cpp  ocvimp.cpp  ocvimp.h  params.cpp  params.h
docs/: readme.txt
imgtrain/: Makefile  funcs.cpp  funcs.h  main.cpp  renraw.sh  symdraw.cpp  tcode.cpp
ngx_nullimp/: cimp.cpp  cimp.h  config  cvimp.cpp  cvimp.h  gmimp.cpp  gmimp.h  imparam.cpp  imparam.h  nginx-modules-guide.html  nginx_module.txt  nginx_module.txt~  ngx_http_circle_gif_module.c  ngx_http_circle_gif_module.cpp  ngx_nullimp.cpp  readme.txt  thpool.c  thpool.h
src/: imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  vlinkocv.cpp
tests/: test.php  test.sh
uis/: mainwindow.ui
